# redis-wasm-components-example

./: Cargo.toml  Makefile
redis-guest/: Cargo.toml
redis-guest/src/: bindings.rs  lib.rs
redis-guest/wit/: world.wit
redis-host/: Cargo.toml
redis-host/src/: main.rs
redis-host/wit/: world.wit
