[package]
name = "redis-guest"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.27.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "wasmredis:guest"

[package.metadata.component.dependencies]

[package.metadata.component.target.dependencies]
"wasmredis:host" = { path = "../redis-host/wit" }
